[package]
name = "marco"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"
repository = "https://github.com/nwtnni/marco"

[dependencies]
anyhow = "1.0.26"
reqwest = { version = "0.10.1", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.8"
